deployments/controller/kubearmor-controller-mutating-webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: kube-system/kubearmor-controller-serving-cert
  name: kubearmor-controller-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: kubearmor-controller-webhook-service
      namespace: kube-system
      path: /mutate-pods
  failurePolicy: Ignore
  name: annotation.kubearmor.com
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
  sideEffects: NoneOnDryRun
  objectSelector:
    matchExpressions:
    - key: "kubearmor-app"
      operator: DoesNotExist
