deployments/controller/kubearmor-controller.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    kubearmor-app: kubearmor-controller
  name: kubearmor-controller-metrics-service
  namespace: kube-system
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    kubearmor-app: kubearmor-controller
---
apiVersion: v1
kind: Service
metadata:
  name: kubearmor-webhook-service
  namespace: kube-system
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    kubearmor-app: kubearmor-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    kubearmor-app: kubearmor-controller
  name: kubearmor-controller
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      kubearmor-app: kubearmor-controller
  template:
    metadata:
      annotations:
        container.apparmor.security.beta.kubernetes.io/manager: unconfined
        kubectl.kubernetes.io/default-container: manager
      labels:
        kubearmor-app: kubearmor-controller
    spec:
      containers:
      - args:
        - --health-probe-bind-address=:8081
        - --metrics-bind-address=127.0.0.1:8080
        - --leader-elect
        command:
        - /manager
        image: kubearmor/kubearmor-controller:latest
        imagePullPolicy: Never
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
        - mountPath: /sys/kernel/security
          name: sys-path
      - args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --logtostderr=true
        - --v=0
        image: gcr.io/kubebuilder/kube-rbac-proxy:v0.12.0
        name: kube-rbac-proxy
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 5m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
      securityContext:
        runAsNonRoot: true
      serviceAccountName: kubearmor-controller
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: webhook-server-cert
      - hostPath:
          path: /sys/kernel/security
          type: Directory
        name: sys-path
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: kube-system/kubearmor-serving-cert
  name: kubearmor-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: kubearmor-webhook-service
      namespace: kube-system
      path: /mutate-pods
  failurePolicy: Ignore
  name: annotation.kubearmor.com
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
  sideEffects: NoneOnDryRun
  objectSelector:
    matchExpressions:
    - key: "kubearmor-app"
      operator: DoesNotExist
